Service Cloud/Case Tagging/force-app/main/default/objects/Case_Tagging_Config__mdt/Case_Tagging_Config__mdt.object-meta.xml
<CustomObject>
    <label>Case Tagging Config</label>
    <pluralLabel>Case Tagging Configs</pluralLabel>
    <description>Configuration for Case Tagging (e.g. default historical scope in months).</description>
</CustomObject>