Service Cloud/Case Tagging/force-app/main/default/objects/Case_Tagging_Config__mdt/fields/Default_Historical_Scope_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Historical_Scope_Months__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Default number of months to include when running historical case tagging analysis.</description>
    <label>Default Historical Scope (Months)</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>