Service Cloud/Case Tagging/force-app/main/default/objects/Case_Tagging_Config__mdt/fields/Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Api_Name__c</fullName>
    <description>API name of the autolaunched Flow that runs the Prompt Template and updates the Case. Create this flow in the org (see SETUP.md).</description>
    <label>Flow API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>