Service Cloud/Case Tagging/force-app/main/default/objects/Case_Tagging_Config__mdt/fields/Prompt_Template_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_Api_Name__c</fullName>
    <description>API name of the Prompt Builder template used for case tagging (e.g. Case_Tagging_Analysis).</description>
    <label>Prompt Template API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>